# ProteinToolbox

./: .env.template  .gitignore  BORG.md  README.md  SKILLS.md  check_biopython.py  evolve_toolbox.sh  main.py  pyproject.toml
data/: tool_registry.json
docs/: design_notes.md  maintenance_strategy.md
docs/tools/: openmm.md  rfdiffusion.md
examples/: full_pipeline_test.py  simple_minimization.py
src/proteintoolbox/: models.py  project.py  registry.py  resources.py  workflows.py
src/proteintoolbox/agents/: crew.py
src/proteintoolbox/gui/: app.py
src/proteintoolbox/skills/: __init__.py  analysis_skills.py  bio_skills.py  design_skills.py  docking_skills.py  docs_skills.py  esm_skills.py  graph_reasoning.py  logic_skills.py  search_skills.py  sim_skills.py  structure_skills.py  validation_skills.py
src/proteintoolbox/utils/: robustness.py
tests/: test_design_analysis.py  test_docs_skills.py  test_esm_skills.py  test_logic_skills.py  test_properties.py  test_robustness.py  test_structure_skills.py  test_validation_skills.py  test_workflows.py
